fix hiddien tutorial buttons on iphone

--- a/rushmore/app/resources/css/marketing.css
+++ b/rushmore/app/resources/css/marketing.css
@@ -457,7 +457,7 @@ background-color: #87D37C;
 
 #lessons-container {
     width: 100%;
-    height: 85vh;
+    height: 85%;
 }
 
 #tutorial-controls {
